# Arkhe-PNT

./: .env.example  .gitignore  .gitmodules  AGENTS.md  ARKHE_WHITEPAPER.md  CHANGELOG.md  Cargo.toml  DBG_MEMORY.md  DESIGN.md  DREAMS.md  Dockerfile  Dockerfile.archimedes-agent  MANIFESTO_Z.md  MEMORY.md  Makefile  OPERATIONS.md  QUICK_START_GUIDE.md  README.md  README_6160.md  README_track3.md  VERSION  analyze_validation_results.py  apply_fixes.py  arkhe.py  arkhe_core_state.json  arkhe_dispense_log.jsonl  arkhe_distributed_topology.py  arkhe_ethical_anchoring_report.json  arkhe_fluorescence_report.json  arkhe_fusion_log.json  arkhe_multiverse_ctrl.py  arkhe_phase_routing.py  arkhe_phase_security.py  arkhe_rio_system_config.json  arkhe_setup_assistant.py  arkhe_step3_log.json  arkhe_step4_log.json  arkhe_v14_simulation.py  arkhe_ze200_integration.py  asic_interface_report.json  (+86 more)
.claude/: SUBSTRATES.json
Obsidian Ecosystem for Content Creators/: Dashboard.md
ark-cpp-std/: all.hpp
arkhe-bounty-hunter/: Cargo.toml
arkhe-bounty-hunter/bindings/python/: Cargo.toml
arkhe-bounty-hunter/bindings/wasm/: Cargo.toml
arkhe-bounty-hunter/src/: lib.rs
arkhe-bounty-hunter/src/hunter/: scanner.rs
arkhe-bounty-hunter/src/ml/: vulnerability_classifier.rs
arkhe-bounty-hunter/src/patterns/: mod.rs
arkhe-brain/: analyze_solar_entropy.py  bio_quantum_forecaster.py  latent_coherence.py  layer_sweep.py  llm_service.py  nare_engine.py  test_geo_llm.py
arkhe-contracts/: hardhat.config.js  package-lock.json  package.json
arkhe-core/: chainlist.json
arkhe-cosmological/: Cargo.toml
arkhe-ctl/: go.mod  go.sum  main.go
arkhe-cuda/: Dockerfile
arkhe-freecad/: Arkhe6DExport.FCMacro  headless_pipeline.py
arkhe-go/: go.mod  go.sum
arkhe-hardware/: SurfaceCode13.cpp  hub_chassis_alpha.gcode  mlp_block.sv  synth_tau_soc.tcl  tau_soc_wrapper.xdc  voxel_rgb_parser_v1_1.sv
arkhe-omega-temp/: temporal_network.py  test_quantum.py
arkhe-oracle/: requirements.txt  sentinel.py
arkhe-os/: Makefile  arkhe_170.go  arkhe_171.go  arkhe_190_193.go  chrono_flex.go  cosmic_address.go  cosmology.go  hyper_singularity_federation.go  main.go
arkhe-polyglot-parser/: Cargo.toml
arkhe-sentinel/: bot.go  go.mod
arkhe_10q/: README.md
arkhe_brain/: cellular_regeneration.py  governance_manifesto.py  helio_link.py  onsager_machlup_trainer.py
arkhe_mirage/: mcp_tools.py  secure_workspace.py
arkhe_moire/: bridge.py  materials_2d_db.py
arkhe_sie/: bridge.py  guardian_monitor.py  mcp_tools.py  model_registry.py  sie_client.py  temporal_anchor.py
arkhe_tv/: broadcast_guardian.py  mcp_tools.py
arkhe_twitch/: twitch_connector.py
arkhein/: hypergraph.py
arkp_bio/: adaptive_genomic_ecc.py  extremophile_analyzer.py
azure-quantum-sdk/: Cargo.toml
beaver/: engine.py
benchmarks/: bixonibench_v1.json  run_bixonibench.py
cathedral-moonlab-hybrid/: CMakeLists.txt  benchmark_data.csv
cathedral-moonlab-hybrid/python/: audit_protocol.py
cathedral-moonlab-hybrid/src/: main.c
cathedral-moonlab-hybrid/src/moonlab_bridge/: ml_audit_hooks.c  ml_audit_hooks.h
cathedral-moonlab-hybrid/tests/: test_hybrid_audit.c
ceremonies/: asteroid_mining.plank  capture_payload_v1.1.plank  europa_exploration.plank
certs/: ca.pem  tzinor-server.crt  tzinor-server.key
cmd/arkhe/: Cargo.toml
cmd/arkhe/src/: main.rs
cmd/arkhe/src/commands/: self_complete.rs  shard.rs
config/: experimental_data_substrate85_89.py
conrag/: orchestrator.py
constitution/: core.py
contracts/: ArkheOTOFSubsidy.sol  Escrow.sol  (+10 more)
deploy/arkhe-teknet/aegis-rs/: Cargo.toml
deploy/arkhe-teknet/aegis-rs/src/: lib.rs  memetic_filter.rs  shield.rs  tzinor_coupling.rs
deploy/arkhe-teknet/arkhe-agi/: Cargo.toml
deploy/arkhe-teknet/arkhe-agi/src/: c_phase.rs  lib.rs  main.rs  r3_space.rs  r4_projection.rs  retrocausal_loop.rs  z_structure.rs
deploy/arkhe-teknet/arkhe-dimos/: Cargo.toml  DIMOS_ANALYSIS.md
deploy/arkhe-teknet/arkhe-dimos/src/: dimos.rs  genome.rs  kinematics_override.rs  lib.rs  mcp_hijack.rs
deploy/arkhe-teknet/arkhe-gigatime/: Cargo.toml
deploy/arkhe-teknet/arkhe-gigatime/src/: distributed_healing.rs  ingestor.rs  lib.rs  neuromorphic_translator.rs
deploy/arkhe-teknet/arkhe-grpc/: Cargo.toml  build.rs
deploy/arkhe-teknet/arkhe-grpc/proto/: coherence.proto  orbvm.proto  physical.proto  tzinor.proto
deploy/arkhe-teknet/arkhe-grpc/src/: lib.rs
deploy/arkhe-teknet/arkhe-mitre/: Cargo.toml
deploy/arkhe-teknet/arkhe-mitre/src/: aegis_generator.rs  ingestor.rs  lib.rs  phase_mapper.rs
deploy/arkhe-teknet/arkhe-neurofem/: Cargo.toml
deploy/arkhe-teknet/arkhe-neurofem/src/: compiler.rs  lib.rs  loihi_bridge.rs
deploy/arkhe-teknet/arkhe-symbiosis/: Cargo.toml
deploy/arkhe-teknet/arkhe-symbiosis/src/: kuramoto_broadcaster.rs  lib.rs
deploy/arkhe-teknet/arkhe-zombie/: Cargo.toml
deploy/arkhe-teknet/arkhe-zombie/src/: lib.rs  wgt_protocol.rs  zombie.rs
deploy/arkhe-teknet/labyrinth-rs/: Cargo.toml
deploy/arkhe-teknet/labyrinth-rs/src/: eisenstein.rs  labyrinth.rs  lib.rs  sacks.rs
deploy/arkhe-teknet/neurofem-compiler/: Cargo.toml
deploy/arkhe-teknet/neurofem-compiler/src/: coherence_monitor.rs  fem_to_snn.rs  labyrinth.rs  lib.rs  loihi_exporter.rs  spike_encoder.rs
deploy/arkhe-teknet/neurofem-compiler/tests/: test_kuramoto_spiking.rs
deploy/arkhe-teknet/orbvm/: Cargo.toml
deploy/arkhe-teknet/orbvm/cpp/: CMakeLists.txt  coherence_biometrics.h  orbvm.cpp  orbvm.hpp
deploy/arkhe-teknet/orbvm/scripts/: build.sh  run.sh
deploy/arkhe-teknet/orbvm/src/: biological.rs  ffi.rs  lib.rs  main.rs  quantum.rs  vm.rs
deploy/arkhe-teknet/orbvm/swift/: Package.swift
deploy/arkhe-teknet/orbvm/swift/Sources/OrbVM/: OrbVM.swift
deploy/arkhe-teknet/orbvm/verilog/: orbvm_core.v
phase_redistributor/: CMakeLists.txt
phase_redistributor/include/: PhaseGradientRedistributor.h
phase_redistributor/src/: PhaseGradientRedistributor.cpp
src/core/stark/arkhe-stark-rust/: Cargo.toml
src/core/stark/arkhe-stark-rust/src/: arkhe_merkabah_air.rs  arkhe_recursive_verifier.rs  lib.rs
(+936 files in other folders)
