[workspace]
resolver = "2"
members = [
    "arkhe-enterprise",
    "arkhe-qart/substrate-6072",
    "substrate-6071",
    "substrate-6090",
    "substrate-6091",
    "substrate-6064",
    "substrate-6065",
    "substrate-6073",
    "substrate-6080",
    "substrate-9001",
    "substrate-9002",
    "arkhe-bounty-hunter",
    "arkhe-cosmological"
]
