[package]
name = "arkhe-bounty-hunter"
version = "5.6.0"
edition = "2021"
description = "ARKHE Ω-TEMP — Universal Bug Bounty Hunter"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
chrono = "0.4"
tokio = { version = "1.34", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1.10"
lazy_static = "1.4"
anyhow = "1.0"
thiserror = "1.0"
petgraph = "0.6"
rand = "0.8"
