[package]
name = "arkhe"
version = "6.1.0"
edition = "2021"

[[bin]]
name = "arkhe"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tonic = "0.12"
prost = "0.12"
# arkhe-oracle = { path = "../../userspace/daemons/oracle" }   # API do daemon - removed for now as it probably doesn't exist
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full", "macros"] }
