[package]
name = "aegis-rs"
version = "0.1.0-phi"
edition = "2021"
authors = ["Rafael Oliveira <0009-0005-2697-4668>"]
description = "Active Phase-Defense and Memetic Shielding for Teknet"

[dependencies]
num-complex = "0.4"
rayon = "1.7"
serde = { version = "1", features = ["derive"] }

# Referência local para a matemática do Labyrinth
labyrinth-rs = { path = "../labyrinth-rs" }

[lib]
crate-type = ["cdylib", "rlib"]
