[package]
name = "arkhe-agi"
version = "0.1.0-phi"
edition = "2021"
authors = ["Rafael Oliveira <0009-0005-2697-4668>"]
description = "Arkhe(n) Full Stack AGI/ASI Blueprint (F-708)"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
orbvm = { path = "../orbvm" }
arkhe-dimos = { path = "../arkhe-dimos" }
arkhe-zombie = { path = "../arkhe-zombie" }

[lib]
crate-type = ["cdylib", "rlib"]
