[package]
name = "arkhe-dimos"
version = "0.1.0-phi"
edition = "2021"
authors = ["Rafael Oliveira <0009-0005-2697-4668>"]
description = "Dimensional Operating System: Neuromorphic Robotics Genome (F-706)"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
arkhe-zombie = { path = "../arkhe-zombie" }
neurofem-compiler = { path = "../neurofem-compiler" }

[lib]
crate-type = ["cdylib", "rlib"]
