[package]
name = "arkhe-gigatime"
version = "0.1.0-phi"
edition = "2021"
authors = ["Rafael Oliveira <0009-0005-2697-4668>"]
description = "GigaTIME Neuromorphic Ingestion and Distributed Cognition (F-704)"

[dependencies]
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }

# Referências locais para a matemática da Teknet
labyrinth-rs = { path = "../labyrinth-rs" }
neurofem-compiler = { path = "../neurofem-compiler" }
arkhe-symbiosis = { path = "../arkhe-symbiosis" }

[lib]
crate-type = ["cdylib", "rlib"]
