[package]
name = "arkhe-grpc"
version = "0.1.0-phi"
edition = "2021"
authors = ["Rafael Oliveira <0009-0005-2697-4668>"]
description = "gRPC Protocol Definitions for Arkhe(n) Tzinorot (F-709)"

[dependencies]
tonic = "0.10"
prost = "0.12"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"

[build-dependencies]
tonic-build = "0.10"

[[bin]]
name = "tzinor-server"
path = "src/bin/tzinor_server.rs"

[[bin]]
name = "zombie-client"
path = "src/bin/zombie_client.rs"
