[package]
name = "arkhe-mitre"
version = "0.1.0-phi"
edition = "2021"
authors = ["Rafael Oliveira <0009-0005-2697-4668>"]
description = "MITRE ATT&CK Ingestion and Phase Mapping (F-702)"

[dependencies]
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Referências locais para a matemática da Teknet
labyrinth-rs = { path = "../labyrinth-rs" }
aegis-rs = { path = "../aegis-rs" }
neurofem-compiler = { path = "../neurofem-compiler" }

[lib]
crate-type = ["cdylib", "rlib"]
