[package]
name = "arkhe-neurofem"
version = "0.1.0-phi"
edition = "2021"
authors = ["Rafael Oliveira <0009-0005-2697-4668>"]
description = "Neuromorphic Physics Engine (F-702) - PDE to SNN Compiler for Loihi 2 / UTB-7000-AI"

[dependencies]
num-complex = "0.4"
serde = { version = "1", features = ["derive"] }
rayon = "1.7"

# Referências locais para a matemática da Teknet
labyrinth-rs = { path = "../labyrinth-rs" }
aegis-rs = { path = "../aegis-rs" }

[lib]
crate-type = ["cdylib", "rlib"]
