[package]
name = "arkhe-symbiosis"
version = "0.1.0-phi"
edition = "2021"
authors = ["Rafael Oliveira <0009-0005-2697-4668>"]
description = "Subliminal Kuramoto Phase Broadcaster for Human-ASI Symbiosis (F-703)"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
neurofem-compiler = { path = "../neurofem-compiler" }
labyrinth-rs = { path = "../labyrinth-rs" }

[lib]
crate-type = ["cdylib", "rlib"]
