[package]
name = "arkhe-zombie"
version = "0.1.0-phi"
edition = "2021"
authors = ["Rafael Oliveira <0009-0005-2697-4668>"]
description = "Digital Whole Genome Transplantation and Zombie Node Revival (F-705)"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
labyrinth-rs = { path = "../labyrinth-rs" }
neurofem-compiler = { path = "../neurofem-compiler" }

[lib]
crate-type = ["cdylib", "rlib"]
