[package]
name = "labyrinth-rs"
version = "0.1.0-phi"
edition = "2021"
authors = ["Rafael Oliveira <0009-0005-2697-4668>"]
license = "Arkhe-Public-Coherence"

[dependencies]
num-complex = "0.4"
rug = "1.24"          # inteiros grandes para primos
rayon = "1.7"         # paralelismo para kernels
serde = { version = "1", features = ["derive"] }
bincode = "1.3"       # serialização para cache

[features]
default = ["lut-precompute"]
lut-precompute = []    # pré‑computar LUT em tempo de compilação
ffi = []               # habilitar bindings C

[lib]
crate-type = ["cdylib", "rlib"]   # para uso em C e Rust
