[package]
name = "neurofem-compiler"
version = "1.0.0-neurofem"
edition = "2021"
authors = ["Rafael Oliveira <0009-0005-2697-4668>"]
description = "Translate Labyrinth Transform phase paths to Spiking Neural Net for Loihi 2"

[dependencies]
num-complex = "0.4"
labyrinth-rs = { path = "../labyrinth-rs" }

[lib]
crate-type = ["cdylib", "rlib"]
