[package]
name = "orbvm"
version = "0.1.0-phi"
edition = "2021"
authors = ["Rafael Oliveira <0009-0005-2697-4668>"]
description = "Orbital Virtual Machine for Arkhe(n) Multi-Substrate Execution (F-707)"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
arkhe-zombie = { path = "../arkhe-zombie" }
arkhe-dimos = { path = "../arkhe-dimos" }

[build-dependencies]
cc = "1.0"
